adds reset and start button(logic not finished), outsourced different JPanels in the createAndShowGUI function